# Audio-Visualizer

./: README.md  audio-visualizer.py  import pyaudio.py  pyproject.toml  realtime-visual.py
src/Audio-Visualizer/: Audio-Visualizer.py
