[project]
name = "Audio-Visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "astroactual",email = "pilotmaddmatt@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyaudiowpatch (>=0.2.12.7,<0.3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "pyqt6 (==6.10.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "textual (>=6.6.0,<7.0.0)",
    "textual-plotext (>=1.0.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[dependency-groups]
dev = [
    "pyinstaller (>=6.17.0,<7.0.0)"
]
